--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="navbar">
-        <a href="" class="home">site home</a><a href="Game1/">Game1</a><a href="Game2/">Game2</a><a href="">navbar link 3</a>
+        <a href="" class="home">site home</a><a href="Game1/">Game1</a><a href="Game2/">Game2</a><a href="testApp/">navbar link 3</a>
     </div>
 
     <div class="content">
