--- a/testApp/index.html
+++ b/testApp/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <script src="script.js"></script>
+    <script>window.fullscreen(true);</script>
 </head>
 <body>
     Hello!
