--- a/index.html
+++ b/index.html
@@ -1,32 +1,13 @@
 ﻿<!DOCTYPE html>
-
-<html lang="en">
+<html>
 <head>
     <meta charset="utf-8" />
-    <title>TypeScript HTML App</title>
-    <link rel="stylesheet" href="app.css" type="text/css" />
+    <title>PC Performance tester</title>
+    <script src="file1.js" type="text/javascript"></script>
 </head>
 <body>
-    <div class="header">
-        <h1>HI</h1>
-        <p>and welcome!</p>
-    </div>
-
-    <div class="navbar">
-        <a href="" class="home">site home</a><a href="Game1/">Game1</a><a href="Game2/">Game2</a><a href="testApp/">navbar link 3</a>
-    </div>
-
-    <div class="content">
-        <button id="clickme"> click me! </button>
-        <!--<p>
-            scroll text scroll textscroll textscroll textscroll textscroll textscroll textscroll textscroll text
-        </p>-->
-    </div>
-
-    <div class="footer">
-        
-    </div>
-
-    <script src="app.js"></script>
+    <button id="button">Run test!</button>
+    <label id="progress"></label>
+    <label id="result" ></label>
 </body>
 </html>
