--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="utf-8" />
     <title>PC Performance tester</title>
     <script src="file1.js" type="text/javascript"></script>
+    <link href="StyleSheet1.css" rel="stylesheet"/>
 </head>
 <body>
-    <button id="button">Run test!</button>
-    <label id="progress"></label>
-    <label id="result" ></label>
+    <div>
+        <header>PC Performace Tester</header>
+        <h1>100% Accurate results every time!</h1>
+        <div class="line">______________________________________________________________________________________</div>
+        <button id="button">Run test!</button>
+        <label id="progress"></label>
+        <div id="result">
+            <label id="yourscoreis"></label>
+            <label id="score"></label>
+            <label id="comment"></label>
+        </div>
+        <div class="filler"></div>
+    </div>
 </body>
 </html>
