this code sucks but its whatever :)

--- a/wyan.dev/wwwroot/index.html
+++ b/wyan.dev/wwwroot/index.html
@@ -28,6 +28,27 @@
             margin: 0;
             padding: 0;
         }
+
+        .text {
+            font-family: 'Roboto Mono', monospace;
+            font-size: 1em;
+        }
+
+        .link:link {
+            color: rgb(158, 161, 185);
+        }
+
+        .link:visited {
+            color: rgb(158, 161, 185);
+        }
+
+        .link:active {
+            color: rgb(158, 161, 185);
+        }
+
+        .link:hover {
+            color: rgb(158, 161, 185);
+        }
     </style>
 
     <div id="app">
