--- a/wyan.dev/wwwroot/index.html
+++ b/wyan.dev/wwwroot/index.html
@@ -34,6 +34,12 @@
             font-size: 1em;
         }
 
+        .subtext {
+            font-family: 'Roboto Mono', monospace;
+            font-size: 1em;
+            color: rgb(158, 161, 185);
+        }
+
         .link:link {
             color: rgb(158, 161, 185);
         }
