--- a/wyan.dev/wwwroot/index.html
+++ b/wyan.dev/wwwroot/index.html
@@ -6,6 +6,8 @@
     <title>wyan.dev</title>
     <base href="/" />
     <link href="css/app.css?version=0.6" rel="stylesheet" />
+    
+    <base href="/redninja106/redninja106.github.io/" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
