--- a/wyan.dev/wwwroot/404.html
+++ b/wyan.dev/wwwroot/404.html
@@ -34,6 +34,12 @@
       );
 
     </script>
+
+    <style>
+        body {
+            background-color: rgb(35, 35, 43);
+        }
+    </style>
 </head>
 <body>
 </body>
